# Ultra-Light-Fast-Generic-Face-Detector-1MB_SOD

./: README.md  convert_to_onnx.py  run_video_face_detect.py  run_video_face_detect_onnx.py  train_yolo.py
models/: RFB-Epoch-0-mAP-0.0012-ValLoss-1.3348.pth  RFB-Epoch-0-mAP-0.0017-ValLoss-1.3464.pth  RFB-Epoch-1-mAP-0.0010-ValLoss-1.1009.pth  RFB-Epoch-1-mAP-0.0045-ValLoss-1.0193.pth  RFB-Epoch-105-640-Loss-0.7346816453295695.pth  RFB-Epoch-2-mAP-0.0057-ValLoss-0.9416.pth  RFB-Epoch-219-640-Loss-0.7376627499858538.pth  RFB-Epoch-38-1280-ValLoss-0.5765.pth
models/onnx/: env_rfb_1280.onnx  env_rfb_640.onnx  env_rfb_720.onnx  env_rfb_960.onnx
models/rfb_1280x1280/: RFB-Epoch-0-mAP-0.0100-ValLoss-0.8573.pth  yolo-model-labels.txt
models/rfb_640x640/: RFB-Epoch-0-mAP-0.0022-ValLoss-1.1156.pth
models/rfb_720x720/: RFB-Epoch-0-mAP-0.0033-ValLoss-1.3267.pth
models/rfb_960x960/: RFB-Epoch-0-mAP-0.0042-ValLoss-1.0056.pth
openvino/: CMakeLists.txt  main.cpp  ultraface_ov.cpp  ultraface_ov.h
openvino/.cache/clangd/index/: main.cpp.DD4647BBB750C569.idx  ultraface_dnn.cpp.5FB9D2836CA2E7BB.idx  ultraface_dnn.h.5755EC2E65BD2847.idx  ultraface_ov.cpp.FA3CC1000C1FBC50.idx
vision/datasets/: yolo_dataset.py
vision/ssd/config/: fd_config.py
vision/transforms/: transforms.py
